feat: correct paths to csv files for kaggle input

--- a/Workshop1/IntroToML/IntroToML-Beginner.ipynb
+++ b/Workshop1/IntroToML/IntroToML-Beginner.ipynb
@@ -37,9 +37,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Let's move to the input directory\n",
-        "%cd /kaggle/input/edinburghai-workshop1\n",
-        "\n",
         "print('Ctrl + Enter runs this cell!')\n",
         "output = 'The last line of a cell is printed by default'\n",
         "output"
@@ -96,11 +93,15 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# First we load some (FAKE) data in from a csv file using a package called pandas\n",
+        "# First let's move to the input directory so we can easily import the data\n",
+        "# If you don't understand this command, don't worry! It's not at all important.\n",
+        "%cd /kaggle/input/edinburghai-workshop1\n",
+        "\n",
+        "# Then we load some (FAKE) data in from a csv file using a package called pandas\n",
         "import pandas as pd\n",
         "\n",
-        "# TODO: Load the data from the csv file '/bigcheese.csv' and display the first few rows\n",
-        "bigcheese_data = pd.read_csv(...)\n",
+        "# TODO: Load the data from the csv file 'bigcheese.csv' and display the first few rows\n",
+        "bigcheese_data = pd.read_csv('bigcheese.csv')\n",
         "bigcheese_data.head()"
       ]
     },
@@ -216,8 +217,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Let's get some new data\n",
-        "big_cheese_quadratic = pd.read_csv('./data/bigcheese-quadratic.csv')\n",
+        "# TODO: Let's get some new data from a csv file called 'bigcheese-quadratic.csv'\n",
+        "big_cheese_quadratic = pd.read_csv(...)\n",
         "\n",
         "# And plot it with our linear model fitted to the new data\n",
         "linear_model.fit(big_cheese_quadratic[['Units of alcohol per week']], big_cheese_quadratic['Big cheese attendances per year'])\n",
@@ -305,7 +306,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# TODO: Load data from the csv file './data/googleinternship_simple.csv'\n",
+        "# TODO: Load data from the csv file 'googleinternship_simple.csv'\n",
         "data = ...\n",
         "data.head()"
       ]
@@ -446,7 +447,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# TODO: Load data from the csv file './data/googleinternship_big.csv'\n",
+        "# TODO: Load data from the csv file 'googleinternship_big.csv'\n",
         "data = ...\n",
         "data.head()"
       ]
