--- a/Workshop1/IntroToML/IntroToML-Expert.ipynb
+++ b/Workshop1/IntroToML/IntroToML-Expert.ipynb
@@ -93,10 +93,13 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# First we load some (FAKE) data in from a csv file using a package called pandas\n",
+        "# First let's move to the input directory so we can easily import the data\n",
+        "%cd /kaggle/input/edinburghai-workshop1\n",
+        "\n",
+        "# Then we load some (FAKE) data in from a csv file using a package called pandas\n",
         "import pandas as pd\n",
         "\n",
-        "# TODO: Load the data from the csv file and display the first few rows\n",
+        "# TODO: Load the 'bigcheese.csv' file and display the first few rows\n",
         "..."
       ]
     },
@@ -196,7 +199,7 @@
       "outputs": [],
       "source": [
         "# Let's get some new data\n",
-        "big_cheese_quadratic = pd.read_csv('./data/bigcheese-quadratic.csv')\n",
+        "big_cheese_quadratic = pd.read_csv('bigcheese-quadratic.csv')\n",
         "\n",
         "# TODO: And plot it with the same basic linear model fitted to the new data\n",
         "..."
@@ -278,7 +281,7 @@
       "outputs": [],
       "source": [
         "# Load some data\n",
-        "data = pd.read_csv('./data/googleinternship_simple.csv')\n",
+        "data = pd.read_csv('googleinternship_simple.csv')\n",
         "data.head()"
       ]
     },
@@ -417,7 +420,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "data = pd.read_csv('./data/googleinternship_big.csv')\n",
+        "data = pd.read_csv('googleinternship_big.csv')\n",
         "data.head()"
       ]
     },
