--- a/Workshop1/IntroToML/IntroToML-Intermediate.ipynb
+++ b/Workshop1/IntroToML/IntroToML-Intermediate.ipynb
@@ -93,10 +93,14 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# First we load some (FAKE) data in from a csv file using a package called pandas\n",
+        "# First let's move to the input directory so we can easily import the data\n",
+        "# If you don't understand this command, don't worry! It's not at all important.\n",
+        "%cd /kaggle/input/edinburghai-workshop1\n",
+        "\n",
+        "# Then we load some (FAKE) data in from a csv file using a package called pandas\n",
         "import pandas as pd\n",
         "\n",
-        "# TODO: Load the data from the csv file './data/bigcheese.csv' and display the first few rows using the .head() method\n",
+        "# TODO: Load the data from the csv file 'bigcheese.csv' and display the first few rows using the .head() method\n",
         "bigcheese_data = pd.read_csv(...)\n",
         "..."
       ]
@@ -214,7 +218,7 @@
       "outputs": [],
       "source": [
         "# Let's get some new data\n",
-        "big_cheese_quadratic = pd.read_csv('./data/bigcheese-quadratic.csv')\n",
+        "big_cheese_quadratic = pd.read_csv('bigcheese-quadratic.csv')\n",
         "\n",
         "# And plot it with our linear model fitted to the new data\n",
         "linear_model.fit(big_cheese_quadratic[['Units of alcohol per week']], big_cheese_quadratic['Big cheese attendances per year'])\n",
@@ -301,8 +305,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Load some data\n",
-        "data = pd.read_csv('./data/googleinternship_simple.csv')\n",
+        "# Load some (FAKE) google hiring data in from a csv file\n",
+        "data = pd.read_csv('googleinternship_simple.csv')\n",
         "data.head()"
       ]
     },
@@ -441,7 +445,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "data = pd.read_csv('./data/googleinternship_big.csv')\n",
+        "data = pd.read_csv('googleinternship_big.csv')\n",
         "data.head()"
       ]
     },
