--- a/Workshop1/IntroToML/IntroToML-Solved.ipynb
+++ b/Workshop1/IntroToML/IntroToML-Solved.ipynb
@@ -55,9 +55,6 @@
         }
       ],
       "source": [
-        "# Let's move to the input directory\n",
-        "%cd /kaggle/input/edinburghai-workshop1\n",
-        "\n",
         "print('Ctrl + Enter runs this cell!')\n",
         "output = 'The last line of a cell is printed by default'\n",
         "output"
@@ -183,7 +180,11 @@
         }
       ],
       "source": [
-        "# First we load some (FAKE) data in from a csv file using a package called pandas\n",
+        "# First let's move to the input directory so we can easily import the data\n",
+        "# If you don't understand this command, don't worry! It's not at all important.\n",
+        "%cd /kaggle/input/edinburghai-workshop1\n",
+        "\n",
+        "# Then we load some (FAKE) data in from a csv file using a package called pandas\n",
         "import pandas as pd\n",
         "\n",
         "# Load the data from the csv file and display the first few rows\n",
