fix: variable name, big cheese quadratic

--- a/Workshop1/IntroToML/IntroToML-Expert.ipynb
+++ b/Workshop1/IntroToML/IntroToML-Expert.ipynb
@@ -229,15 +229,15 @@
         "import numpy as np\n",
         "\n",
         "# TODO: We can add a quadratic term to our model by creating a new column in our data that is the square of the 'Units of alcohol per week' column\n",
-        "new_data['Units of alcohol per week squared'] = ...\n",
+        "...\n",
         "\n",
         "# TODO: And then we can fit a new model to the data with the quadratic term included\n",
         "...\n",
         "\n",
         "# And plot the data with the new model\n",
         "# Don't worry too much about the code below, it's just to make the plot look nicer\n",
-        "plt.scatter(data=new_data, x='Units of alcohol per week', y='Big cheese attendances per year')\n",
-        "x_smooth = np.linspace(new_data['Units of alcohol per week'].min(), new_data['Units of alcohol per week'].max(), 100)\n",
+        "plt.scatter(data=big_cheese_quadratic, x='Units of alcohol per week', y='Big cheese attendances per year')\n",
+        "x_smooth = np.linspace(big_cheese_quadratic['Units of alcohol per week'].min(), big_cheese_quadratic['Units of alcohol per week'].max(), 100)\n",
         "x_smooth_squared = x_smooth ** 2\n",
         "x_smooth_data = np.column_stack([x_smooth, x_smooth_squared])\n",
         "y_smooth = linear_model.predict(x_smooth_data)\n",
