feat: add ability to load your own image

--- a/Workshop3/CNNs-Solved.ipynb
+++ b/Workshop3/CNNs-Solved.ipynb
@@ -427,7 +427,10 @@
    "source": [
     "## 3. Segment your face!\n",
     "\n",
-    "Let's now use a more advanced model that's already been trained (pre-trained) to segment your own face! The two cells below current fetches an image from online. To use your own custom image, you'll need to upload it to Kaggle, load it in and convert it to a PIL image. There are instructions in the code to do this."
+    "Let's now use a more advanced model that's already been trained (pre-trained) to segment your own face! The two cells below current fetches an image from online. Try running the cells below.\n",
+    "\n",
+    "To use your own custom image (e.g. you), you'll need to upload it to Kaggle and load it in. To do that, under 'Input', click Upload, and upload an image you want to segment. Then name the dataset something like 'my-image', then edit the code in the cell below to load it in.\n",
+    "\n"
    ]
   },
   {
@@ -455,9 +458,14 @@
     "import matplotlib.pyplot as plt\n",
     "import requests\n",
     "\n",
+    "# TODO: Comment the code below to load in your own custom image\n",
     "# This cell loads an image and displays it\n",
     "url = \"https://images.unsplash.com/photo-1539571696357-5a69c17a67c6\"\n",
     "image = Image.open(requests.get(url, stream=True).raw)\n",
+    "\n",
+    "# TODO: Uncomment the line below, and edit it to load in your own custom image\n",
+    "# image = Image.open('../input/NAME_OF_DATASET/NAME_OF_FILE_WITH_EXTENSION')\n",
+    "\n",
     "# Show the image\n",
     "plt.imshow(image)\n",
     "plt.axis('off')\n",
