update input url

--- a/Workshop3/CNNs-Solved.ipynb
+++ b/Workshop3/CNNs-Solved.ipynb
@@ -462,7 +462,7 @@
     "from torch.utils.data import random_split\n",
     "\n",
     "# Define the data directory\n",
-    "data_dir = './kaggle/input/UCMerced_LandUse/Images'\n",
+    "data_dir = '/kaggle/input/uc-merced-land-use-dataset/UCMerced_LandUse/Images'\n",
     "\n",
     "# Define transforms\n",
     "transform = transforms.Compose([\n",
