add some more comments and remove cell outputs

--- a/Workshop3/CNNs-Solved.ipynb
+++ b/Workshop3/CNNs-Solved.ipynb
@@ -666,7 +666,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now lets train the CNN!"
+    "Now lets train the CNN! Make sure to activate GPU-acceleration to speed up the training! You can do this by \n",
+    "1. Clicking \"settings\" at the top\n",
+    "2. Going to \"Accelerator\"\n",
+    "3. Clicking GPU P100\n",
+    "4. If you are prompted whether you want to turn it on, just click \"OK\""
    ]
   },
   {
@@ -768,7 +772,7 @@
     "from tqdm import tqdm\n",
     "\n",
     "# Define hyperparameters\n",
-    "num_epochs = 8\n",
+    "num_epochs = 10\n",
     "learning_rate = 0.001\n",
     "\n",
     "# Define loss function and optimizer\n",
@@ -832,7 +836,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Puh, that took ages to train. Let's look at how well our model does on unseen data (our test-set)."
+    "Let's look at how well our model does on unseen data (our test-set)."
    ]
   },
   {
