--- a/Workshop3/CNNs-Solved.ipynb
+++ b/Workshop3/CNNs-Solved.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "## Today\n",
     "1. Understand what a **convolutional layer** is and its configurable parameters.\n",
-    "2. Train your own image classifier! 🖼️ \n",
+    "2. Train your own image classifier for satellite data! 🖼️ \n",
     "3. Facial segmentation🥸 of *your own face* with a pre-trained model. This one is fun and shouldn't take very long!\n",
     "\n",
     "Let's get started! 💯"
@@ -399,7 +399,210 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's recap how we train neural networks. If you need a better refresher, you can last the notebook from the last workshop.\n",
+    "### Defining a simple CNN\n",
+    "\n",
+    "Now that we have all the bits in place, lets take a look at how we can define a simple CNN. \n",
+    "\n",
+    "Usually, the model consists of a base and a head. The **base** is used for **feature extraction** and consists of at least one, but usually more **Convolutional Layers**. The **head** consists of at least on dense layer (tbt the Neural Networks workshop) and takes as input the extracted features from the Convolutional Layer. For example, if we try to detect faces, the convolutional layers in the base would find two circles next to each other (eyes), a vertical and a horizontal line (nose and mouth) and the dense layers in the head would learn to classify this combination of features as a face.\n",
+    "\n",
+    "Each **Convolutional Layer** in the base is made of of **three basic operations**:\n",
+    "1. Convolution **filters** an image for a particular feature\n",
+    "2. ReLU **detects** that feature within the filtered image\n",
+    "3. Maximum Pooling **condenses** the image (and enhances the features)\n",
+    "\n",
+    "Let's define our own convolutional layer!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([32, 128, 128])\n"
+     ]
+    }
+   ],
+   "source": [
+    "layer = nn.Sequential(\n",
+    "    nn.Conv2d(in_channels=3, out_channels=32, kernel_size=3, padding=1),\n",
+    "    nn.ReLU(),\n",
+    "    nn.MaxPool2d(kernel_size=2, stride=2),\n",
+    ")\n",
+    "\n",
+    "# Let's see what the output shape is\n",
+    "random_image = torch.randn(3, 256, 256) # 3 is the number of channels (RGB), 256 is the height and width of our image\n",
+    "output = layer(random_image)\n",
+    "print(output.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have defined a **single Convolutional Layer**, we need to think about how to connect the **head** to it! Looking at the size of the output of the convolutional layer, we observer that the image is still in 2D-format. But the dense layer requires a 1D-input. Therefore, we need to apply an operation to transform the data from 2D to 1D. We will use [nn.Flatten()](https://pytorch.org/docs/stable/generated/torch.flatten.html). Lets look at how this works!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original 2D input:\n",
+      "tensor([[1, 2, 3],\n",
+      "        [4, 5, 6],\n",
+      "        [7, 8, 9]])\n",
+      "Shape: torch.Size([3, 3])\n",
+      "\n",
+      "Flattened 1D output:\n",
+      "tensor([[1, 2, 3, 4, 5, 6, 7, 8, 9]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a 2D input tensor (3x3)\n",
+    "input_2d = torch.tensor([[1, 2, 3],\n",
+    "                         [4, 5, 6],\n",
+    "                         [7, 8, 9]])\n",
+    "\n",
+    "print(\"Original 2D input:\")\n",
+    "print(input_2d)\n",
+    "print(\"Shape:\", input_2d.shape)\n",
+    "\n",
+    "# Create a Flatten layer\n",
+    "flatten = nn.Flatten()\n",
+    "\n",
+    "# Apply the Flatten operation\n",
+    "output_1d = flatten(input_2d.unsqueeze(0))  # We need to do a little trick here, since the layer usually operates on multiple examples of data at the same time (batches).\n",
+    "\n",
+    "print(\"\\nFlattened 1D output:\")\n",
+    "print(output_1d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With the flatten operation, we can are now ready to attach a classification head to our CNN!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sequential(\n",
+      "  (0): Conv2d(3, 32, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "  (1): ReLU()\n",
+      "  (2): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "  (3): Flatten(start_dim=1, end_dim=-1)\n",
+      "  (4): Linear(in_features=131072, out_features=5, bias=True)\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = nn.Sequential(\n",
+    "    # Base (Find Nose, Mouth, Eyes)\n",
+    "\n",
+    "    ## Our convolutional layer\n",
+    "    nn.Conv2d(in_channels=3, out_channels=32, kernel_size=3, padding=1), # Filter\n",
+    "    nn.ReLU(), # Detect\n",
+    "    nn.MaxPool2d(kernel_size=2, stride=2), # Condense\n",
+    "\n",
+    "    # Head (Classify that combination of features as a face)\n",
+    "\n",
+    "    ## The flatten layer, which transforms the 2D output of the convolutional layer into a 1D input for the dense layer\n",
+    "    nn.Flatten(),\n",
+    "\n",
+    "    ## The dense layer, which would perform the classification\n",
+    "    nn.Linear(32 * 64 * 64, 5)\n",
+    ")\n",
+    "\n",
+    "# Let's see the architecture of our model\n",
+    "print(model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's try feeding it some dummy data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Model output shape:\n",
+      "torch.Size([3, 5])\n",
+      "\n",
+      "Model output (first sample):\n",
+      "tensor([ 0.4029,  0.0957, -0.0330,  0.4690, -0.0736],\n",
+      "       grad_fn=<SelectBackward0>)\n",
+      "\n",
+      "\n",
+      "The model processes 3 images, each with dimensions 3x128x128.\n",
+      "It outputs 3 sets of 5 numbers, corresponding to the 5 output classes.\n",
+      "Each number represents the model's 'confidence' for that class.\n",
+      "The highest number indicates the predicted class.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create some dummy data to feed into the model\n",
+    "batch_size = 3\n",
+    "channels = 3\n",
+    "height = 128\n",
+    "width = 128\n",
+    "dummy_input = torch.randn(batch_size, channels, height, width)\n",
+    "\n",
+    "# Feed the dummy data through the model\n",
+    "output = model(dummy_input)\n",
+    "\n",
+    "print(\"\\nModel output shape:\")\n",
+    "print(output.shape)\n",
+    "\n",
+    "print(\"\\nModel output (first sample):\")\n",
+    "print(output[0])\n",
+    "\n",
+    "print('\\n')\n",
+    "# Explanation of the output\n",
+    "print(f\"The model processes {batch_size} images, each with dimensions {channels}x{height}x{width}.\")\n",
+    "print(f\"It outputs {batch_size} sets of 5 numbers, corresponding to the 5 output classes.\")\n",
+    "print(\"Each number represents the model's 'confidence' for that class.\")\n",
+    "print(\"The highest number indicates the predicted class.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we have the basic structure of a CNN, but currently it only outputs gibberish because we haven't trained it yet. We will first review what it takes to train a NN and then you will create your own!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, let's recap how we train neural networks. If you need a better refresher, you can look at the notebook from the last workshop.\n",
     "\n",
     "#### Recap: Steps to Train a NN in Pytorch\n",
     "\n",
