restructure train your own cnn and add explanations

--- a/Workshop3/CNNs-Solved.ipynb
+++ b/Workshop3/CNNs-Solved.ipynb
@@ -401,7 +401,7 @@
    "source": [
     "### Defining a simple CNN\n",
     "\n",
-    "Now that we have all the bits in place, lets take a look at how we can define a simple CNN. \n",
+    "With all the bits in place, lets take a look at how we can define a simple CNN. \n",
     "\n",
     "Usually, the model consists of a base and a head. The **base** is used for **feature extraction** and consists of at least one, but usually more **Convolutional Layers**. The **head** consists of at least on dense layer (tbt the Neural Networks workshop) and takes as input the extracted features from the Convolutional Layer. For example, if we try to detect faces, the convolutional layers in the base would find two circles next to each other (eyes), a vertical and a horizontal line (nose and mouth) and the dense layers in the head would learn to classify this combination of features as a face.\n",
     "\n",
@@ -443,7 +443,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have defined a **single Convolutional Layer**, we need to think about how to connect the **head** to it! Looking at the size of the output of the convolutional layer, we observer that the image is still in 2D-format. But the dense layer requires a 1D-input. Therefore, we need to apply an operation to transform the data from 2D to 1D. We will use [nn.Flatten()](https://pytorch.org/docs/stable/generated/torch.flatten.html). Lets look at how this works!"
+    "Now that we have defined a **single Convolutional Layer**, we need to think about how to connect the **head** to it so we can use the extracted features for something! Looking at the size of the output of the convolutional layer, we observer that the image is still in 2D-format. But the dense layer requires a 1D-input. Therefore, we need to apply an operation to transform the data from 2D to 1D. We will use [nn.Flatten()](https://pytorch.org/docs/stable/generated/torch.flatten.html). Lets look at how this works!"
    ]
   },
   {
@@ -490,7 +490,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With the flatten operation, we can are now ready to attach a classification head to our CNN!"
+    "As you can see, the tensor is transformed from 3x3 to 1x9. Now we are ready to attach a classification head to our CNN! We will reuse the convolutional layer we used earlier and then add the flatten operation and a linear layer. This is the part you should try to understand best. What is each part doing? What is the dimensionality of the inputs being passed through?"
    ]
   },
   {
@@ -637,6 +637,7 @@
     "2. Select \"Datasets\" as filter\n",
     "3. Search for \"UC Merced Land Use Dataset\" and add it.\n",
     "\n",
+    "**There will be a lot of code in this section that you don't need to worry about!** You will be working on the most relevant bits that help you understand how to train a CNN. Of course, if you are curious about anything else in the code, feel free to ask us!\n",
     "\n",
     "Now let's import the data so we can take a look at it:"
    ]
@@ -664,8 +665,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# Define the data directory\n",
-    "data_dir = './kaggle/input/UCMerced_LandUse/Images'\n",
-    "# data_dir = '/kaggle/input/uc-merced-land-use-dataset/UCMerced_LandUse/Images'\n",
+    "data_dir = '/kaggle/input/uc-merced-land-use-dataset/UCMerced_LandUse/Images'\n",
     "\n",
     "\n",
     "# Define transforms\n",
@@ -689,7 +689,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's look at some examples to see what we are working with. This code randomly picks 4 images and displays them with their label. Feel free to run the cell multiple times."
+    "Let's look at some examples to see what we are working with. This code randomly picks 4 images and displays them with their label. Don't worry about how exactly this works, just run it a few times to get a feel for what the data looks like!"
    ]
   },
   {
@@ -744,9 +744,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Think🤔**: What do you think the challenges are for training a classifier on this dataset?\n",
+    "**Think🤔**: What do you think the challenges are for training a classifier on this dataset? Are there any classes that might be harder to distinguish than others?\n",
     "\n",
-    "Let's start by setting up a DataLoader, which helps us feed the images to the classifier in a convenient way. We define one each for train, validation and test set."
+    "Let's start by setting up a DataLoader, which helps us feed the images to the classifier in a convenient way. We define one each for our train and test set. This is just boilerplate infrastructure code we need to get our model off the ground, so don't worry about it too much."
    ]
   },
   {
@@ -778,14 +778,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's define our Convolutional Neural Network. This is a fairly simple architecture, feel free to play around with it."
+    "Now let's define our Convolutional Neural Network. You can copy the convolutional layer we defined earlier. Usually, we define multiple convolutional layers in the base to better extract features. Add another one or two! Then, add the flatten operation and one or more fully connected Layers. The output of the final Linear Layer needs to correspond to the number of output classes in our dataset (21)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sequential(\n",
+      "  (0): Conv2d(3, 32, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "  (1): ReLU()\n",
+      "  (2): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "  (3): Conv2d(32, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "  (4): ReLU()\n",
+      "  (5): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "  (6): Conv2d(64, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+      "  (7): ReLU()\n",
+      "  (8): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "  (9): Flatten(start_dim=1, end_dim=-1)\n",
+      "  (10): Linear(in_features=131072, out_features=512, bias=True)\n",
+      "  (11): ReLU()\n",
+      "  (12): Linear(in_features=512, out_features=21, bias=True)\n",
+      ")\n"
+     ]
+    }
+   ],
    "source": [
     "import torch.nn as nn\n",
     "\n",
@@ -812,7 +834,6 @@
     "    # Fully connected layers\n",
     "    nn.Linear(128 * 32 * 32, 512),\n",
     "    nn.ReLU(),\n",
-    "    nn.Dropout(0.5),\n",
     "    \n",
     "    nn.Linear(512, 21)  # 21 output classes as per the UC Merced Land Use Dataset\n",
     ")\n",
@@ -824,7 +845,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now lets train the CNN! Make sure to activate GPU-acceleration to speed up the training! You can do this by \n",
+    "Now lets train the CNN! **Make sure to activate GPU-acceleration to speed up the training**! You can do this by \n",
     "1. Clicking \"settings\" at the top\n",
     "2. Going to \"Accelerator\"\n",
     "3. Clicking GPU P100\n",
@@ -915,8 +936,26 @@
     "\n",
     "test_accuracy = 100 * test_correct / test_total\n",
     "\n",
-    "print(f\"Test Loss: {test_loss/len(test_loader):.4f}, Test Accuracy: {test_accuracy:.2f}%\")\n",
+    "print(f\"Test Loss: {test_loss/len(test_loader):.4f}, Test Accuracy: {test_accuracy:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Do you think our model is performing well on unseen data? \n",
     "\n",
+    "One good way of visualising the model's classification performance is looking at a Confusion Matrix. It's called a \"confusion\" matrix because it makes it easy to see if the model is confusing two classes (i.e., mislabeling one class as another). A confusion matrix shows the true labels on one axis and the model's predictions on the other, making it easy to see where the model is accurate and where it's making mistakes. The diagonal of the matrix shows correct predictions, while off-diagonal elements reveal misclassifications, allowing you to quickly identify which classes the model struggles to distinguish.\n",
+    "\n",
+    "Let's generate one for the model you have trained!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Confusion Matrix and Classification Report\n",
     "from sklearn.metrics import confusion_matrix, classification_report\n",
     "import seaborn as sns\n",
@@ -959,7 +998,9 @@
     "\n",
     "I think we can do a lot better than this! There are several ways we could try to improve the performance. One is to try to define a better model architecture. Since the current model is fairly simple, we would probably need to define something more complex. But then training would take even longer! \n",
     "\n",
-    "Another option is to use an already trained CNN that is very good at feature detection and just add our own classification head. Lets try to do that instead! We will use [Inception-v3](https://pytorch.org/hub/pytorch_vision_inception_v3/). This is a great option because some people spent a lot of time and money on training it and we can just build on top of that! Just run the cell below and it will take care of training & testing. It will take a while because Inception-V3 is quite big.\n"
+    "Another option is to use an already trained CNN that is very good at feature detection and just add our own classification head. Lets try to do that instead! We will use [Inception-v3](https://pytorch.org/hub/pytorch_vision_inception_v3/). This is a great option because some people spent a lot of time and money on training it and we can just build on top of that! Just run the cell below and it will take care of training & testing.\n",
+    "\n",
+    "Dont worry about the details of the code too much - essentially we are doing the exact same thing as before, except for that our base layer now uses Inception-v3 instead of our own convolutional layers.\n"
    ]
   },
   {
@@ -982,7 +1023,10 @@
     "\n",
     "# Add a classification head consisting of 4 layers to the pre-trained model.\n",
     "model.fc = nn.Sequential(\n",
+    "    # Base\n",
     "    nn.Linear(model.fc.in_features, 512),\n",
+    "\n",
+    "    # Classification Head\n",
     "    nn.ReLU(),\n",
     "    nn.Linear(512, 256),\n",
     "    nn.ReLU(),\n",
@@ -1034,8 +1078,22 @@
     "    print(f\"Epoch [{epoch+1}/{num_epochs}], Loss: {epoch_loss:.4f}, Accuracy: {epoch_acc:.2f}%\")\n",
     "\n",
     "\n",
-    "print(\"Training finished!\")\n",
-    "\n",
+    "print(\"Training finished!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's test this model's performance on the unseen test-data!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Evaluation on test set\n",
     "model.eval()\n",
     "test_loss = 0\n",
@@ -1056,8 +1114,22 @@
     "\n",
     "test_accuracy = 100 * test_correct / test_total\n",
     "\n",
-    "print(f\"Test Loss: {test_loss/len(test_loader):.4f}, Test Accuracy: {test_accuracy:.2f}%\")\n",
-    "\n",
+    "print(f\"Test Loss: {test_loss/len(test_loader):.4f}, Test Accuracy: {test_accuracy:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And finally, look at the confusion matrix!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Confusion Matrix and Classification Report\n",
     "all_predictions = []\n",
     "all_labels = []\n",
