feat: fixed to cnns section

--- a/Workshop3/CNNs-Solved.ipynb
+++ b/Workshop3/CNNs-Solved.ipynb
@@ -286,7 +286,7 @@
     "\n",
     "But to do that, we're going to need more than one layer. We take the 'image' output from the previous layer, and plug it in as input to the next layer. The deeper you go in the network, the more abstract the concepts become, because it's combining concepts from the previous layer. \n",
     "\n",
-    "Remember last week we needed non-linearity of our input so as not to make straight lines? Some similar logic can be applied here, so we apply `ReLU` again. But now we have a much more intuitive reason for using ReLU: Imagine we have run a convolution layer that tries to detect where faces are. Each pixel in the output is a score for how confident we are there is a face at this location. Except, we only really care about the highest scores. Therefore, we can run the ReLU max function to only retain the information about where we are fairly sure there is a face. More theoretically, we represent far more complicated functions with ReLU.\n",
+    "Remember last week we needed non-linearity of our input so as not to make straight lines? Some similar logic can be applied here, so we use `ReLU` (max(input, 0)) again. But now we have a much more intuitive reason for using ReLU: Imagine we have run a convolution layer that tries to detect where faces are. Each pixel in the output is a score for how confident we are there is a face at this location. Except, we only really care about the highest scores. Therefore, we can run the ReLU/max function to retainonly  the information about where we are fairly sure there is a face. A more theoretical argument is that we can represent far more complicated functions with ReLU.\n",
     "\n",
     "We can also improve speed with 'max pooling'. Don't worry too much about this, as it's less important, and it's not the only way to save on computation. This can be run in Pytorch with [`nn.MaxPool2d()`](https://pytorch.org/docs/stable/generated/torch.nn.MaxPool2d.html).\n",
     "\n",
@@ -303,12 +303,14 @@
     "\n",
     "With all the bits in place, lets take a look at how we can define a simple CNN. \n",
     "\n",
-    "Usually, the model consists of a base and a head. The **base** is used for **feature extraction** and consists of at least one, but usually more **Convolutional Layers**. The **head** consists of at least on dense layer (tbt the Neural Networks workshop) and takes as input the extracted features from the Convolutional Layer. For example, if we try to detect faces, the convolutional layers in the base would find two circles next to each other (eyes), a vertical and a horizontal line (nose and mouth) and the dense layers in the head would learn to classify this combination of features as a face.\n",
+    "Usually, the model consists of a base and a head. The **base** is used for **feature extraction** and consists of at least one, but usually more **Convolutional Layers**. Its job is to detect all those useful features like edges/colours, The **head** consists of at least one linear layer/dense layer (remember from the Neural Networks workshop?) and takes as input the extracted features from the Convolutional Layer. Its job is to take in all those features and decide on the output.\n",
+    "\n",
+    "In a facial detection example, the convolutional layers in the base might find two circles next to each other (eyes), a vertical and a horizontal line (nose and mouth) and the fully connected layers in the head would learn to classify this combination of features as a face.\n",
     "\n",
     "Each **Convolutional Layer** in the base is made of of **three basic operations**:\n",
-    "1. Convolution **filters** an image for a particular feature\n",
-    "2. ReLU **detects** that feature within the filtered image\n",
-    "3. Maximum Pooling **condenses** the image (and enhances the features)\n",
+    "1. Convolution **filters** an image for a particular feature. This is what we've already been doing.\n",
+    "2. ReLU for non-linearity and a cutoff for feature feature within the filtered image.\n",
+    "3. Maximum Pooling condenses the image down into lower resolution.\n",
     "\n",
     "Let's define our own convolutional layer!"
    ]
@@ -335,7 +337,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have defined a **single Convolutional Layer**, we need to think about how to connect the **head** to it so we can use the extracted features for something! Looking at the size of the output of the convolutional layer, we observer that the image is still in 2D-format. But the dense layer requires a 1D-input. Therefore, we need to apply an operation to transform the data from 2D to 1D. We will use [nn.Flatten()](https://pytorch.org/docs/stable/generated/torch.flatten.html). Lets look at how this works!"
+    "Now that we have defined a **single Convolutional Layer**, we need to think about how to connect the **head** to it so we can use the extracted features for something! Looking at the size of the output of the convolutional layer, we observe that the image is still in 2D-format. But the dense layer requires a 1D-input. Therefore, we need to apply an operation to transform the data from 2D to 1D. We will use [nn.Flatten()](https://pytorch.org/docs/stable/generated/torch.flatten.html). Lets look at how this works!"
    ]
   },
   {
@@ -357,7 +359,7 @@
     "flatten = nn.Flatten()\n",
     "\n",
     "# Apply the Flatten operation\n",
-    "output_1d = flatten(input_2d.unsqueeze(0))  # We need to do a little trick here, since the layer usually operates on multiple examples of data at the same time (batches).\n",
+    "output_1d = flatten(input_2d.unsqueeze(0))  # We need to do a little 'unsqueezing' here, since the layer usually operates on multiple examples of data at the same time (batches). Its just a technicality that adds a dimension, don't worry about it for now.\n",
     "\n",
     "print(\"\\nFlattened 1D output:\")\n",
     "print(output_1d)"
@@ -367,7 +369,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see, the tensor is transformed from 3x3 to 1x9. Now we are ready to attach a classification head to our CNN! We will reuse the convolutional layer we used earlier and then add the flatten operation and a linear layer. This is the part you should try to understand best. What is each part doing? What is the dimensionality of the inputs being passed through?"
+    "As you can see, the tensor is transformed from 3x3 to 1x9. Now we are ready to attach a classification head to our CNN! We will reuse the convolutional layer we used earlier and then add the flatten operation and a linear layer. \n",
+    "\n",
+    "**Think 🤔**: This is the part you should try to understand best. What is each part doing? What is the dimensionality of the inputs being passed through?"
    ]
   },
   {
@@ -445,7 +449,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, let's recap how we train neural networks. If you need a better refresher, you can look at the notebook from the last workshop.\n",
+    "Let's recap how we train neural networks. If you need a better refresher, you can look at the notebook from the last workshop.\n",
     "\n",
     "#### Recap: Steps to Train a NN in Pytorch\n",
     "\n",
@@ -600,7 +604,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's define our Convolutional Neural Network. You can copy the convolutional layer we defined earlier. Usually, we define multiple convolutional layers in the base to better extract features. Add another one or two! Then, add the flatten operation and one or more fully connected Layers. The output of the final Linear Layer needs to correspond to the number of output classes in our dataset (21)."
+    "Now, define your own Convolutional Neural Network!🔥 You can copy the convolutional layer we defined earlier as a start. You should try to add another convolutional layer or two yourself!\n",
+    "\n",
+    "**Think 🤔**: How should you do this? What are the inputs and outputs? This isn't so easy, so ask for some help to have a discussion about this!\n",
+    "\n",
+    "Then, add the flatten operation and one or more fully connected Layers. The output of the final Linear Layer needs to correspond to the number of output classes in our dataset (21)."
    ]
   },
   {
@@ -708,7 +716,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's look at how well our model does on unseen data (our test-set)."
+    "Let's look at how well our model does on our test-set."
    ]
   },
   {
@@ -962,9 +970,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Congratulations, this version performs A LOT better than our previous attempt! Making use of pre-trained models can be very helpful, and a lot of models are available for free directly within [PyTorch](https://pytorch.org/hub/research-models). You can also check out [HuggingFace](www.huggingface.com), where people share a lot of datasets and pre-trained models that you can use. This comes in very handy if you are working on a project of your own and don't want to bother dealing with low-level details of the CNN-architecture.\n",
+    "Congratulations, hopefully this version performs A LOT better than our previous attempt! Making use of pre-trained models can be very helpful, and a lot of models are available for free directly within [PyTorch](https://pytorch.org/hub/research-models). You can also check out [HuggingFace](www.huggingface.com), where people share a lot of datasets and pre-trained models that you can use. This comes in very handy if you are working on a project of your own and don't want to bother dealing with low-level details of the CNN-architecture.\n",
     "\n",
-    "**Think🤔:** Still, the model has some trouble distinguishing between some classes. Do you have an idea of how we could improve on that?"
+    "**Extension😈:** The model still has some trouble distinguishing between certain classes. Do you have an idea of how we could improve on that?"
    ]
   },
   {
