add explanation for how to find input size of the first linear layer after the flatten operation experimentally

--- a/Workshop3/CNNs-Solved.ipynb
+++ b/Workshop3/CNNs-Solved.ipynb
@@ -608,7 +608,7 @@
     "\n",
     "**Think 🤔**: How should you do this? What are the inputs and outputs? This isn't so easy, so ask for some help to have a discussion about this!\n",
     "\n",
-    "Then, add the flatten operation and one or more fully connected Layers. The output of the final Linear Layer needs to correspond to the number of output classes in our dataset (21)."
+    "Then, add the flatten operation and one or more fully connected Layers. The output of the final Linear Layer needs to correspond to the number of output classes in our dataset (21). If you struggle with finding the right size of the first linear layer in the classification head, you can define the model just up to the flatten operation first, then pass in a dummy input with the same size as the satellite images (3 x 256 x 256) and look at the size of the output of the flatten operation. This will then be the size of number of inputs into the first linear layer!"
    ]
   },
   {
