add section 2 to work-notebook

--- a/Workshop3/CNNs-Solved.ipynb
+++ b/Workshop3/CNNs-Solved.ipynb
@@ -676,7 +676,7 @@
     "learning_rate = 0.001\n",
     "\n",
     "# Define loss function and optimizer\n",
-    "criterion = nn.CrossEntropyLoss()\n",
+    "loss_fn = nn.CrossEntropyLoss()\n",
     "optimizer = optim.Adam(model.parameters(), lr=learning_rate)\n",
     "\n",
     "# Training loop\n",
@@ -694,7 +694,7 @@
     "        \n",
     "        optimizer.zero_grad()\n",
     "        outputs = model(images)\n",
-    "        loss = criterion(outputs, labels)\n",
+    "        loss = loss_fn(outputs, labels)\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "        \n",
@@ -735,7 +735,7 @@
     "    for images, labels in tqdm(test_loader, desc=\"Testing\"):\n",
     "        images, labels = images.to(device), labels.to(device)\n",
     "        outputs = model(images)\n",
-    "        loss = criterion(outputs, labels)\n",
+    "        loss = loss_fn(outputs, labels)\n",
     "        \n",
     "        test_loss += loss.item()\n",
     "        _, predicted = outputs.max(1)\n",
@@ -847,7 +847,7 @@
     "model = model.to(device)\n",
     "\n",
     "# Define loss function and optimizer\n",
-    "criterion = nn.CrossEntropyLoss()\n",
+    "loss_fn = nn.CrossEntropyLoss()\n",
     "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
     "\n",
     "# Training loop\n",
@@ -868,8 +868,8 @@
     "        \n",
     "        # Inception v3 returns tuple in training mode\n",
     "        outputs, aux_outputs = model(images)\n",
-    "        loss1 = criterion(outputs, labels)\n",
-    "        loss2 = criterion(aux_outputs, labels)\n",
+    "        loss1 = loss_fn(outputs, labels)\n",
+    "        loss2 = loss_fn(aux_outputs, labels)\n",
     "        loss = loss1 + 0.4*loss2\n",
     "        \n",
     "        loss.backward()\n",
@@ -913,7 +913,7 @@
     "        images, labels = images.to(device), labels.to(device)\n",
     "        images = nn.functional.interpolate(images, size=(299, 299))\n",
     "        outputs = model(images)\n",
-    "        loss = criterion(outputs, labels)\n",
+    "        loss = loss_fn(outputs, labels)\n",
     "        \n",
     "        test_loss += loss.item()\n",
     "        _, predicted = outputs.max(1)\n",
